# IVA_DI

./: .editorconfig
data/opslag_inclusieve_spraakassistent_project/: Vraag_antwoord_ov_v3.csv  Vraag_antwoord_ov_v5.csv  Vraag_antwoord_paspoort(Blad1).csv  Vraag_antwoord_paspoort.csv  Vraag_antwoord_paspoort_old.csv  instructions_ov_stripped.csv  instructions_paspoort_stripped_v2.csv  navigation.csv  patterns_v2.csv
experiment/: .gitignore  README.md  angular.json  package-lock.json  package.json  proxy.py  timeslots.py
experiment/proxy-override/: .gitignore
experiment/src/: index.html
experiment/src/app/: app.routes.ts  app.ts
experiment/src/app/appointment/: appointment.html  appointment.scss  appointment.ts
experiment/src/app/speak/: speak.html  speak.scss  speak.spec.ts  speak.ts
experiment/src/environments/: environment.ts
notebooks/: run_instruction_agent.ipynb
scripts/: instruction_agent.py
ui/: manage.py  pyproject.toml  requirements.in  requirements.txt
ui/langchain/: agents.py  apps.py  forms.py  instruction_agent.py  models.py  urls.py  views.py
ui/langchain/templates/langchain/: index.html  manage_sessions.html
ui/whisper/: forms.py  urls.py  views.py  whisper.py
ui/whisper/management/commands/: transcribe.py
ui/whisper/templates/whisper/: base.html  homepage.html  index.html
ui/whisperui/: asgi.py  settings.py  urls.py  wsgi.py
